<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:background="#78909C"
    tools:context="com.example.mirlan.diplom.Activity.LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="50dp"
    android:background="#CFD8DC"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username_text"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:id="@+id/textView_username"
         />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginStart="20dp"
        android:hint="@string/username_hint"
        android:ems="10"
        android:id="@+id/edittext_username" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CFD8DC"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password_text"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:id="@+id/textView_password"
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:id="@+id/edittext_password"
      />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#F5F5F5"
        android:background="#455A64"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_login"
        android:id="@+id/button_login"
        android:layout_marginTop="40dp" />
</LinearLayout>
